# airports

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat
res/: airports.csv
src/: AirportManager.cpp  AirportManager.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: AirportManagerTest.cpp
